[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Graphics/Misc/heart_full.png" type="Texture" id=1]
[ext_resource path="res://Resources/Graphics/Misc/heart_empty.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Heart.gd" type="Script" id=3]
[ext_resource path="res://Resources/Shaders/Disintegrate.tres" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/disintegrationProgress = 0.0
shader_param/pixelSize = 1.0

[node name="Heart" type="Node2D"]
scale = Vector2( 3, 3 )
z_index = 10
script = ExtResource( 3 )

[node name="Empty" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Full" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="ShowTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="ShowTimer" to="." method="_on_ShowTimer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
